Changes on state for Modal

--- a/src/Components/Header-Section/header_section.css
+++ b/src/Components/Header-Section/header_section.css
@@ -1,6 +1,8 @@
 .btn-primary{
     background-color: black;
     color: yellow;
+    /* padding: .75rem;
+    border-radius: .75rem; */
 }
 
 .btn-primary:hover{
